[package]
name = "computer-control-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.4"
windows-service = "0.6.0"
windows-volume-control = "0.1.1"

[dependencies.windows]
version = "0.52.0"
features = []
